# geoxide

./: .gitignore  CMakeLists.txt  README.md  setup.py
converters/: CMakeLists.txt
converters/include/Geoxide/: MeshConverter.h  TextureConverter.h
converters/src/: Common.h  Main.cc  MeshConverter.cc  TextureConverter.cc  pch.h
geoxide/: CMakeLists.txt
geoxide/assets/shaders/: Common.hlsl  FlatColor.hlsl  Geoxide.hlsli  GeoxideShader.hlsl  Lambert.hlsl  LambertCommon.hlsl  LambertDiff.hlsl  Phong.hlsl  PhongCommon.hlsl  PhongDiff.hlsl  PhongDiffSpec.hlsl  PhongSpec.hlsl  Texture.hlsl
geoxide/assets/shaders/Lit/: Color.hlsl  ColorSpec.hlsl  Geoxide.hlsli  Texture.hlsl
geoxide/assets/shaders/Unlit/: Color.hlsl  Geoxide.hlsli  SkyBox.hlsl  Texture.hlsl
geoxide/include/: Geoxide.h
geoxide/include/Geoxide/: Application.h  Camera.h  CommandList.h  DDSLoader.h  DepthTarget.h  Entity.h  EntityRegistry.h  Event.h  Format.h  FrameEvent.h  GpuBuffer.h  GpuProgram.h  KeyCode.h  KeyEvent.h  Material.h  MaterialLoader.h  Mesh.h  MeshData.h  ModelLoader.h  MouseEvent.h  Movable.h  Object.h  RenderState.h  RenderTarget.h  Renderer.h  RendererContext.h  RendererDevice.h  RendererEnum.h  RendererStruct.h  ResourceManager.h  Scene.h  SceneManager.h  SceneNode.h  Shader.h  ShaderManager.h  SkeletalAnimation.h  Texture.h  Window.h  WindowEvent.h
geoxide/src/: Application.cc  ApplicationEvent.cc  Camera.cc  DDSLoader.cc  Entity.cc  Material.cc  MaterialLoader.cc  ModelLoader.cc  Movable.cc  Object.cc  ResourceManager.cc  Scene.cc  SceneManager.cc  SceneNode.cc  ShaderManager.cc  SkeletalAnimation.cc  Window.cc  pch.h
geoxide/src/SDL/: SDLWindow.cc  SDLWindow.h
geoxide_util/: CMakeLists.txt
geoxide_util/include/Geoxide/: Base.h  Core.h  Log.h  Math3D.h  MathTypes.h  Matrix.h  MatrixCommon.inl  Platform.h  Quaternion.h  VecCommon.inl  Vector.h
geoxide_util/src/: Color.cc  Core.cc  Log.cc  Matrix.cc  Vector.cc  pch.h
geoxide_util/src/Win32/: Log.cc
meshconv/: CMakeLists.txt
meshconv/include/Geoxide/: MeshConverter.h
meshconv/src/: Main.cc  MeshConverter.cc  pch.h
renderers/: CMakeLists.txt
renderers/direct3d11/: CMakeLists.txt
renderers/direct3d11/include/CompiledShaders/: PointLightPassPS.h  PointLightPassVS.h  ShadowPassVS.h
renderers/direct3d11/include/Geoxide/: D3D11DepthTarget.h  D3D11GpuBuffer.h  D3D11GpuProgram.h  D3D11MeshData.h  D3D11RenderTarget.h  D3D11Renderer.h  D3D11RendererBase.h  D3D11Shader.h  D3D11Texture.h  DX11_GpuBuffer.h  DX11_GpuProgram.h  DX11_Mesh.h  DX11_RendererContext.h  DX11_RendererDevice.h  DX11_Shader.h  DX11_Texture.h
renderers/direct3d11/src/: D3D11CreateResources.cc  D3D11CreateStates.cc  D3D11DepthTarget.cc  D3D11GpuBuffer.cc  D3D11GpuProgram.cc  D3D11MeshData.cc  D3D11RenderTarget.cc  D3D11Renderer.cc  D3D11RendererBase.cc  D3D11Shader.cc  D3D11Texture.cc  D3D11Utils.cc  DX11_RendererContext.cc  DX11_RendererDevice.cc  Main.cc  pch.h
renderers/direct3d11/src/Shaders/: PointLightPass.hlsl  ShadowPass.hlsl
test/: CMakeLists.txt
test/assets/materials/: StingrayPBS2.001.material  StingrayPBS2.material  default.material  link_statue_body.material  link_statue_head.material
test/assets/models/: bunny.model  link_statue.model  lucy.model  monkey_dancing.model  teapot.model
test/assets/shaders/: Color.fx  Color.hlsl  Texture.fx
test/assets/textures/: link_statue_body.texture  link_statue_body_sp.texture  link_statue_head.texture  link_statue_head_sp.texture
test/include/: MeshScene.h  SandboxScene.h  TestApplication.h
test/src/: Main.cc  MeshScene.cc  SandboxScene.cc  TestApplication.cc
